Update: fixed Misalignment

--- a/styles.css
+++ b/styles.css
@@ -464,7 +464,7 @@ img:hover {
     margin-top: 4em;
   }
   .section__title {
-    text-align: left;
+    text-align: center;
   }
   .project {
     width: 100%;
